2004-11-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/klass.py: save width/height when
	subject.ownedAttribute and subject.ownedOperation change.

2004-11-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/xmiexport/__init__.py: Added action with save dialog.
	* data/plugins/xmiexport/exportmodel.py: Added timestamp, use
	XMLWriter.
	* FAQ: new file.
	* gaphor/ui/diagramview.py: Focus item that is DND'd to the canvas.
	* gaphor/*/*: replaced tabs by spaces.
	* gaphor/diagram/placementactions.py: renamed actions.py to
	placementactions.py to avoid ambiguity with action.py (used for
	state diagrams)
	* gaphor/ui/diagramtab.py: moved DND code from diagramview.py to
	DiagramTab. This will make it easy to run actions when an item is
	DND'd.

2004-11-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/attribute.py: added listener for 'association', so
	undo can work properly.
        * data/plugins/alignment: Make only sensitive if items are selected.
	* data/plugins/svgexport: New plugin.
	* gaphor/ui/diagramactions.py: Moved SVG export code to svgexport
	plugin.
	* gaphor/diagram/association.py: Moved the Side A/B submenu's in
	separate sub menu's that can be activated when the mouse pointer is
	at the end of the association.

2004-11-07  Jeroen Vloothuis  <jeroen@vloothuis.net>

        * data/plugins/alignment: Added a plugin for adjusting the
        alignment of diagram items. Currentyl does horizontal and
        vertical alignment.

2004-11-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/diagramactions.py: Made a start if simple copy/paste
	functionality.

2004-11-04  Jeroen Vloothuis  <jeroen@vloothuis.net>
        * gaphor/ui/diagramactions.py: Implemented a confirmation dialog for
        the delete action.

2004-11-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/xmlwriter.py: new file. XMLGenerator with CDATA handling
	following the SAX standard.